# sso-format

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: text_docs.md  vf_docs.md
headers/: io.h  text.h  vf.h
python/: text.py  vf.py
src/: text.c  vf.c
